fix(a11y): add labels and improve contrast

--- a/styles/_contact.module.scss
+++ b/styles/_contact.module.scss
@@ -48,7 +48,7 @@
 }
 
 .email {
-  @apply leading-relaxed text-indigo-500;
+  @apply leading-relaxed text-indigo-600;
 }
 
 .phone {
