--- a/styles/_footer.module.scss
+++ b/styles/_footer.module.scss
@@ -19,7 +19,7 @@
 }
 
 .institute {
-  @apply ml-1 text-gray-500;
+  @apply ml-1 text-gray-400;
 }
 
 .social {
